# pynslookup

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
github/workflows/: pre-commit.yaml
pynslookup/: __main__.py  _dns.py  _ip.py  const.py  main.py
pynslookup/util/: bijective_dict.py
