[metadata]
name = pre_commit
version = 4.5.1
description = A cut down python implementation of nslookup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Michae1CC/pynslookup
author = Michael Ciccotosto-Camp
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.14

[options.entry_points]
console_scripts =
    pynslookup = pynslookup.main:main

[options.extras_require]
dev =
    black
    mypy
    pre-commit
    types-setuptools

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = deprecated
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
